--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,8 @@ navigation_header:
   url: /
 - title: About
   url: /about/
-- title: Blogg
-  url: /blogg/
+- title: Blog
+  url: /blog/
 
 # Footer nav
 navigation_footer:
@@ -51,7 +51,7 @@ collections:
   posts:
     title: Posts
     output: true
-    description: "My thoughts and ideas"
+    description: "My thoughts and ideasssss"
     feature_text: |
       Welcome to my blog
     feature_image: "https://picsum.photos/2560/600?image=866"
