--- a/_config.yml
+++ b/_config.yml
@@ -36,10 +36,14 @@ paginate_path: blog/page:num
 navigation_header:
 - title: Home
   url: /
-- title: About
-  url: /about/
 - title: Blog
   url: /blog/
+- title: Publications
+   url: /publications/
+- title: CV
+   url: /cv/
+- title: Contact
+   url: /contact/
 
 # Footer nav
 navigation_footer:
